View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033312 | Community | OCCT:Data Exchange | public | 2023-01-10 13:06 | 2023-01-21 16:27 |
Reporter | gkv311 | Assigned To | vglukhik | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Platform | Linux | OS | Ubuntu 20.04 | ||
Summary | 0033312: Data Exchange - NULL-dereference in StepToTopoDS_TranslateShell::Init() | ||||
Description | GCC12 found the following misprint in StepToTopoDS_TranslateShell::Init() leading to obvious NULL-dereference introduced by commit for 0030024:C:\occt.git\src\StepToTopoDS\StepToTopoDS_TranslateShell.cxx:143: warning: 'this' pointer is null [-Wnonnull] C:/occt.git/src/StepToTopoDS/StepToTopoDS_TranslateShell.cxx: In member function 'void StepToTopoDS_TranslateShell::Init(const opencascade::handle<StepVisual_TessellatedShell>&, StepToTopoDS_Tool&, StepToTopoDS_NMTool&, Standard_Boolean, Standard_Boolean&, const Message_ProgressRange&)': C:/occt.git/src/StepToTopoDS/StepToTopoDS_TranslateShell.cxx:143:27: warning: 'this' pointer is null [-Wnonnull] 143 | aSh = aBinder->Shell(); | ~~~~~~~~~~~~~~^~ on the following code: Handle(TransferBRep_ShapeBinder) aBinder = Handle(TransferBRep_ShapeBinder)::DownCast(aTP->Find(theTSh->TopologicalLink())); if (aBinder.IsNull()) { aSh = aBinder->Shell(); theHasGeom = Standard_True; } | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33312 has been created by DenisOrlov. SHA-1: 0aaf1ad9f904a3337366b64212d6793a1bddec62 Detailed log of new commits: Author: dorlov Date: Thu Jan 12 11:39:07 2023 +0000 0033312: Data Exchange - NULL-dereference in StepToTopoDS_TranslateShell::Init() The condition "if" was changed to opposite |
|
Branch CR33312 has been updated forcibly by DenisOrlov. SHA-1: a659752c444703f35a75300ab9289e9376b2b4eb |
|
Branch CR33312 has been updated forcibly by DenisOrlov. SHA-1: b362f8849b25ac757066aa2ae0b27441e32900b8 |
|
The condition "if" was changed to opposite |
|
Dear ika, please review: OCCT: CR33312 PROD: NO All builds are ok, http://jenkins-test-10.nnov.opencascade.com/view/CR33312-master-DenisOrlov/view/OCCT%20compile/job/CR33312-master-DenisOrlov-OCCT-Ubuntu2004-64-opt-compile/ http://jenkins-test-10.nnov.opencascade.com/view/CR33312-master-DenisOrlov/view/OCCT%20compile/job/CR33312-master-DenisOrlov-OCCT-Windows-64-VC142-opt-compile/ Tests are not required. I fixed the problem with incorrect compare |
|
No remarks. Dear bugmaster, please integrate OCCT CR33312 |
|
Branch CR33312 has been deleted by mnt. SHA-1: b362f8849b25ac757066aa2ae0b27441e32900b8 |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-01-10 13:06 | gkv311 | New Issue | |
2023-01-10 13:06 | gkv311 | Assigned To | => ika |
2023-01-10 13:45 | dpasukhi | Relationship added | related to 0030024 |
2023-01-11 16:54 | dpasukhi | Assigned To | ika => DenisOrlov |
2023-01-12 14:39 | git | Note Added: 0112795 | |
2023-01-19 11:50 | DenisOrlov | Status | new => resolved |
2023-01-19 12:18 | dpasukhi | Status | resolved => assigned |
2023-01-19 12:19 | git | Note Added: 0112880 | |
2023-01-19 12:23 | git | Note Added: 0112881 | |
2023-01-19 12:40 | DenisOrlov | Status | assigned => feedback |
2023-01-19 12:40 | DenisOrlov | Note Added: 0112884 | |
2023-01-19 12:44 | dpasukhi | Status | feedback => assigned |
2023-01-19 12:45 | DenisOrlov | Assigned To | DenisOrlov => ika |
2023-01-19 12:45 | DenisOrlov | Status | assigned => resolved |
2023-01-19 12:45 | DenisOrlov | Steps to Reproduce Updated | |
2023-01-19 12:46 | dpasukhi | Assigned To | ika => DenisOrlov |
2023-01-19 12:46 | dpasukhi | Status | resolved => assigned |
2023-01-19 12:47 | dpasukhi | Steps to Reproduce Updated | |
2023-01-19 12:56 | DenisOrlov | Assigned To | DenisOrlov => ika |
2023-01-19 12:56 | DenisOrlov | Status | assigned => resolved |
2023-01-19 12:56 | DenisOrlov | Steps to Reproduce Updated | |
2023-01-19 13:22 | DenisOrlov | Note Added: 0112885 | |
2023-01-19 17:05 | ika | Assigned To | ika => bugmaster |
2023-01-19 17:05 | ika | Status | resolved => reviewed |
2023-01-19 17:05 | ika | Note Added: 0112887 | |
2023-01-21 16:23 | vglukhik | Changeset attached | => occt master fc72568b |
2023-01-21 16:23 | vglukhik | Assigned To | bugmaster => vglukhik |
2023-01-21 16:23 | vglukhik | Status | reviewed => verified |
2023-01-21 16:23 | vglukhik | Resolution | open => fixed |
2023-01-21 16:27 | git | Note Added: 0112909 |