0033312: Data Exchange - NULL-dereference in StepToTopoDS_TranslateShell::Init()

The condition "if" was changed to opposite